# Hackathon-Coffee-is-Life

./: .gitignore  README.md  batch_infer_vllm.py  contextualize_snippets.py  dry_run_contextualize_snippets.py  hf_utils.py  main.py  prompting.py  pyproject.toml  requirements.txt  train_gemma_e2b_sft_grpo.py
artifacts/: contextualized.jsonl  polars-snippets.json
docs/: CONTEXTUALIZE_SNIPPETS.md  DATA_FORMATS.md  OFFLINE_BATCH_INFERENCE.md  REFACTOR_PLAN.md
scripts/: build_polars_snippets.sh  prepare_github_pairs.py  prepare_pairs.py  run_finetune.sh  setup_env.sh
